# Warid

./: .gitignore  DESIGN.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  release.yml
docs/: index.html
docs/assets/: main.js  mockups.css  styles.css
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/analytics/: AnalyticsPage.tsx
src/components/history/: HistoryPage.tsx
src/components/layout/: MilestoneBanner.tsx  QuotaIndicator.tsx  Sidebar.tsx  UpdateBanner.tsx
src/components/logs/: LogsPage.tsx
src/components/onboarding/: Welcome.tsx
src/components/recording/: ControlBar.tsx  Recorder.tsx  UploadPage.tsx  Waveform.tsx
src/components/settings/: SettingsPage.tsx
src/components/templates/: TemplatesPage.tsx
src/components/ui/: HotkeyField.tsx  Select.tsx
src/lib/: analyticsAI.ts  audio.ts  autostart.ts  cancelHotkey.ts  commandHotkeys.ts  db.ts  fileTranscriber.ts  gemini.ts  hotkey.ts  i18n.ts  overlayWindow.ts  pdfExporter.ts  prompts.ts  recordingAbort.ts  sharedRecorder.ts  store.ts  topWords.ts  updateCheck.ts  useLang.ts
src/stores/: analyticsStore.ts  historyStore.ts  logStore.ts  recordingStore.ts  requestTrackerStore.ts  settingsStore.ts  templatesStore.ts  uploadQueueStore.ts
src/styles/: index.css
src/types/: index.ts
templates/: README.md  meeting-notes.json  transcribe-verbatim.json  translate-to-english.json
